--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,8 +1,7 @@
 doctype html
 html
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    title= 'Makkos Map'
     block customMeta
   body
     block content
