adding search button

--- a/views/index.pug
+++ b/views/index.pug
@@ -25,4 +25,4 @@ block content
     div(class="input-group")
       input(id="address-input" type="text" class="form-control" placeholder="Search for address...")
       span(class="input-group-btn")
-        button(class="btn btn-default" type="button" onclick="searchAddress();") Go!
+        button(id="addressButton" class="btn btn-default" type="button" onclick="searchAddress();") Go!
